--- a/views/creategame.html
+++ b/views/creategame.html
@@ -4,6 +4,15 @@
 
 <h1>Create Game!</h1>
 
-Enter Number of cards for each player to write<input type="number" max="10" id="numCards">
+<form action="/creategame/created" method="POST">
+    <label>Enter Your Name:</label>
+    <input type="text" name="leader" required>
+
+    <label>Enter Number of Cards:</label>
+    <input type="number" name="maxCards" max="10" required>
+
+    <button type="submit">Create Game</button>
+</form>
+
 </body>
 </html>
